# voice-room

./: .e2e-up.pids  .env.example  .gitignore  CLAUDE.md  Cargo.toml  RUNBOOK.md  docker-compose.yml  jest.config.js  jest.cross-lang.config.js  mcp.json  package-lock.json  package.json  playwright.config.ts  playwright.unit.config.ts  tsconfig.cross-lang.json  tsconfig.json  tsconfig.scripts.json
.github/: copilot-instructions.md
app/adminServer/: Cargo.toml
app/adminServer/config/: default.toml  dev.toml  prod.toml  test.toml
app/adminServer/migrations/: 001_create_admins.sql  002_create_admin_logs.sql  003_seed_super_admin.sql  004_add_admins_deleted_at.sql
app/adminServer/src/: lib.rs  main.rs
app/adminServer/src/bootstrap/: mod.rs
app/adminServer/src/common/: error.rs  mod.rs  request_context.rs  response.rs
app/adminServer/src/common/auth/: claims.rs  context.rs  mod.rs
app/adminServer/src/common/middleware/: audit.rs  jwt_auth.rs  mod.rs  rbac.rs
app/adminServer/src/infrastructure/: config.rs  logging.rs
app/adminServer/src/modules/: mod.rs
app/adminServer/src/modules/audit/: controller.rs  dto.rs  repository.rs  service.rs
app/adminServer/src/modules/auth/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
app/adminServer/src/modules/event/: mod.rs  notice_service.rs  publisher.rs  query_dto.rs  query_handler.rs  query_repo.rs  query_service.rs
app/adminServer/src/modules/gift/: dto.rs  handler.rs  repo.rs  service.rs
app/adminServer/src/modules/governance/: handler.rs  repo.rs  service.rs
app/adminServer/src/modules/nobility/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
app/adminServer/src/modules/payment/: admin_service.rs  controller.rs  dto.rs  mod.rs  repo.rs  report_controller.rs  report_dto.rs  report_query.rs  report_service.rs  sku_controller.rs  sku_dto.rs  sku_repo.rs  sku_service.rs
app/adminServer/src/modules/room/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
app/adminServer/src/modules/stats/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
app/adminServer/src/modules/user/: controller.rs  dto.rs  mod.rs  repository.rs  service.rs
app/adminServer/src/modules/wallet/: dto.rs  handler.rs  repository.rs  service.rs
app/adminServer/tests/: admin_auth_repository_test.rs  admin_settings_load_test.rs  governance_logs_test.rs  health_endpoint_test.rs
app/server/: .env.example  Cargo.toml
app/server/config/: default.toml  dev.toml  prod.toml  staging.toml  test.toml
app/server/migrations/: 001_create_users.sql  002_create_rooms.sql  003_add_unique_active_room_per_owner.sql  004_create_wallet.sql  005_create_gifts.sql  006_create_gift_records.sql  007_create_events.sql  008_room_governance.sql  009_align_mute_type_column.sql  010_create_chat_messages.sql  011_create_nobility.sql  012_create_payment_tables.sql
app/server/src/: lib.rs  main.rs
app/server/src/bootstrap/: mod.rs
app/server/src/common/: error.rs  mod.rs  request_context.rs  response.rs
app/server/src/common/auth/: context.rs  mod.rs
app/server/src/common/middleware/: jwt_auth.rs
app/server/src/common/time/: mod.rs  riyadh.rs
app/server/src/core/: mod.rs
app/server/src/core/analytics/: mod.rs  scheduler.rs  writer.rs
app/server/src/events/: admin_event.rs  handler.rs  mod.rs  subscriber.rs
app/server/src/infrastructure/: config.rs  logging.rs  mod.rs
app/server/src/infrastructure/database/: mod.rs
app/server/src/infrastructure/redis_store/: mod.rs
app/server/src/modules/: mod.rs
app/server/src/modules/auth/: controller.rs  dto.rs  mod.rs  repository.rs  routes.rs  service.rs
app/server/src/modules/chat/: controller.rs  dto.rs  mod.rs  repository.rs  routes.rs
app/server/src/modules/events/: handler.rs  mod.rs  ws.rs
app/server/src/modules/gift/: dto.rs  handler.rs  mod.rs  ranking.rs  repo.rs  routes.rs  send_gift.rs  service.rs
app/server/src/modules/gift/send_gift/: fake.rs  handler.rs  messages.rs  mod.rs  service.rs  types.rs
app/server/src/modules/governance/: force_mic.rs  kick.rs  mod.rs  mute.rs  transfer.rs
app/server/src/modules/nobility/: controller.rs  cron.rs  dto.rs  global_broadcast.rs  mod.rs  privileges.rs  purchase.rs  routes.rs  service.rs
app/server/src/modules/payment/: controller.rs  cron.rs  dev_mock.rs  dto.rs  error.rs  google_billing_port.rs  mod.rs  repo.rs  risk.rs  routes.rs  rtdn_service.rs  service.rs  verify_service.rs
app/server/src/modules/ranking/: handler.rs  mod.rs  scheduler.rs  service.rs
app/server/src/modules/room/: controller.rs  dto.rs  members_handler.rs  members_service.rs  mod.rs  password.rs  repository.rs  routes.rs  service.rs  validator.rs
app/server/src/modules/wallet/: broadcaster.rs  controller.rs  dto.rs  mod.rs  routes.rs  service.rs
app/server/src/room/: filter.rs  handler.rs  manager.rs  mic_lock.rs  mod.rs  state.rs
app/server/src/room/handler/: chat.rs  lifecycle.rs  mic.rs  mod.rs
app/server/src/stats/: mod.rs  service.rs  snapshot_task.rs
app/server/src/ws/: broadcaster.rs  connection.rs  handler.rs  heartbeat.rs  mod.rs  registry.rs  schema_guard.rs
app/server/tests/: admin_event_roundtrip_test.rs  admin_force_disconnect_test.rs  chat_dual_path_equivalence.rs  chat_persistence_test.rs  chat_rest_broadcast_test.rs  cross_service_balance_event_test.rs  events_batch_test.rs  force_mic_test.rs  gift_list_test.rs  governance_real_repos_test.rs  health_endpoint_test.rs  kick_user_test.rs  members_list_test.rs  migration_isolation_test.rs  mute_user_test.rs  password_room_test.rs  payment_create_order_test.rs  payment_schema_test.rs  protocol_schema_test.rs  ranking_test.rs  report_event_ws_test.rs  room_governance_schema_test.rs  send_gift_http_test.rs  send_gift_test.rs  server_settings_load_test.rs  transfer_admin_test.rs  wallet_api_test.rs  wallet_schema_test.rs
app/server/tests/common/: mod.rs
coverage/: clover.xml  coverage-final.json  lcov.info
doc/: ARCHITECTURE.md  DEBUG_SOP.md  LLM_RULES.md  Tasks.md  product.md  protocol.md  tmp.md
scripts/: check_no_sentry_imports.sh  fix_binding_tables.py
(+1379 files in other folders)
