[package]
name = "voice-room-admin-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voice-room-shared = { path = "../shared" }
toml = "0.8"

[dev-dependencies]
tower = "0.5"
