[package]
name = "voice-room-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voice-room-shared = { path = "../shared" }
toml = "0.8"
async-trait = "0.1"
jsonwebtoken.workspace = true
rand = "0.9"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

[dev-dependencies]
tower = "0.5"
