[package]
name = "voice-room-server"
version = "0.1.0"
edition = "2021"

[features]
# 测试辅助：暴露 Fake 类型和 AppState::for_test* 方法，供集成测试使用
test-utils = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voice-room-shared = { path = "../shared" }
toml = "0.8"
async-trait = "0.1"
jsonwebtoken.workspace = true
rand = "0.9"
bcrypt.workspace = true
dashmap = "6.0"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
futures-util = "0.3"

[dev-dependencies]
tower = "0.5"

# 集成测试需要 test-utils feature（暴露 Fake 类型和 AppState::for_test*）
[[test]]
name = "gift_list_test"
required-features = ["test-utils"]

[[test]]
name = "wallet_api_test"
required-features = ["test-utils"]

[[test]]
name = "wallet_schema_test"
required-features = ["test-utils"]

[[test]]
name = "send_gift_test"
required-features = ["test-utils"]

[[test]]
name = "ranking_test"
required-features = ["test-utils"]

[[test]]
name = "events_batch_test"
required-features = ["test-utils"]

[[test]]
name = "report_event_ws_test"
required-features = ["test-utils"]

[[test]]
name = "room_governance_schema_test"
