[package]
name = "voice-room-server"
version = "0.1.0"
edition = "2021"

[features]
# 测试辅助：暴露 Fake 类型和 AppState::for_test* 方法，供集成测试使用
test-utils = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
voice-room-shared = { path = "../shared" }
toml = "0.8"
async-trait = "0.1"
jsonwebtoken.workspace = true
rand = "0.9"
bcrypt.workspace = true
dashmap = "6.0"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
futures-util = "0.3"

[dev-dependencies]
tower = "0.5"
# T-00103: WS 出栈 schema 校验（仅 #[cfg(test)] 代码路径使用，dev-dep 足够）
jsonschema = "0.18"
# T-00041: 启用 tokio test-util 以使用 `tokio::time::pause/advance` + `start_paused`，
# 在 heartbeat_task 真实 select! / interval 路径上做时间快进单测。
tokio = { workspace = true, features = ["test-util"] }

# 集成测试需要 test-utils feature（暴露 Fake 类型和 AppState::for_test*）
[[test]]
name = "gift_list_test"
required-features = ["test-utils"]

[[test]]
name = "wallet_api_test"
required-features = ["test-utils"]

[[test]]
name = "wallet_schema_test"
required-features = ["test-utils"]

[[test]]
name = "send_gift_test"
required-features = ["test-utils"]

[[test]]
name = "ranking_test"
required-features = ["test-utils"]

[[test]]
name = "events_batch_test"
required-features = ["test-utils"]

[[test]]
name = "report_event_ws_test"
required-features = ["test-utils"]

[[test]]
name = "room_governance_schema_test"

[[test]]
name = "password_room_test"
required-features = ["test-utils"]

[[test]]
name = "kick_user_test"
required-features = ["test-utils"]

[[test]]
name = "mute_user_test"
required-features = ["test-utils"]

[[test]]
name = "transfer_admin_test"
required-features = ["test-utils"]

[[test]]
name = "force_mic_test"
required-features = ["test-utils"]

[[test]]
name = "governance_real_repos_test"
required-features = ["test-utils"]

[[test]]
name = "send_gift_http_test"
required-features = ["test-utils"]

[[test]]
name = "chat_persistence_test"
required-features = ["test-utils"]

[[test]]
name = "chat_rest_broadcast_test"
required-features = ["test-utils"]

[[test]]
name = "chat_dual_path_equivalence"
required-features = ["test-utils"]

[[test]]
name = "admin_event_roundtrip_test"

[[test]]
name = "protocol_schema_test"
